less trafic for the garbage collector.
git-svn-id: https://svn.apache.org/repos/asf/ode/trunk@1038631 13f79535-47bb-0310-9956-ffa450edef68